collapsing the axes

--- a/Linear Reqgression.html
+++ b/Linear Reqgression.html
@@ -18,7 +18,7 @@ Hope you enjoy it.
 <button id="loadDataSet" onclick="readDataSet()">Load Data Set</button>
 </div>
 <div id="graph" style="display:none">
-<table id="graphTable">
+<table style="border-collapse:collapse;" id="graphTable">
 </table>
 </div>
 </body>
