refactor line creation to factory & line algo implementation

--- a/Linear Reqgression.html
+++ b/Linear Reqgression.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <script type="text/javascript" src="Point.js"></script>
+<script type="text/javascript" src="AxisLine.js"></script>
+<script type="text/javascript" src="AlgorithmLine.js"></script>
+<script type="text/javascript" src="LineFactory.js"></script>
 <script type="text/javascript" src="Line.js"></script>
 <script type="text/javascript" src="readData.js"></script>
 </head>
@@ -8,7 +11,7 @@
 <p>
 Welcome to this trial of visualizing "2D Linear regression algorithm".<br/><br/>
 Here below you can enter your data set in x & y pairs comma separated.<br/><br/>
-For simplicity in visualization, X values and y values can't exceed 100.<br/><br/>
+For simplicity in visualization, X values and y values can't exceed 50.<br/><br/>
 For simplicity in visualization, X values and y values can't be negative.<br/><br/>
 Only integer values are allowed, if non-integer number is entered, it will be casted to integer.<br/><br/>
 Hope you enjoy it.
