trying different initial values for slope & intersect

--- a/Linear Reqgression.html
+++ b/Linear Reqgression.html
@@ -11,9 +11,9 @@
 <p>
 Welcome to this trial of visualizing "2D Linear regression algorithm".<br/><br/>
 Here below you can enter your data set in x & y pairs comma separated.<br/><br/>
-For simplicity in visualization, X values and y values can't exceed 50.<br/><br/>
+<!--For simplicity in visualization, X values and y values can't exceed 50.<br/><br/>
 For simplicity in visualization, X values and y values can't be negative.<br/><br/>
-Only integer values are allowed, if non-integer number is entered, it will be casted to integer.<br/><br/>
+Only integer values are allowed, if non-integer number is entered, it will be casted to integer.<br/><br/>-->
 Hope you enjoy it.
 </p>
 <div id="dataSetEntry">
@@ -23,6 +23,20 @@ Hope you enjoy it.
 <div id="graph" style="display:none">
 <table style="border-collapse:collapse;" id="graphTable">
 </table>
+<div>
+Slope: <div style="float:right;margin-right: 900px;" id="currentSlope"></div>
+</div>
+<div>
+Intersect: <div style="float:right;margin-right: 900px;" id="currentIntersect"></div>
+</div>
+<div>
+LSE: <div style="float:right;margin-right: 900px;" id="LSE"></div>
+</div>
+
+<div>
+Min LSE: <div style="float:right;margin-right: 800px;" id="minLSE"></div>
+</div>
+
 </div>
 </body>
 </html>
